API creation and Test Jupiter

--- a/src/main/resources/template/Champions.tmpl
+++ b/src/main/resources/template/Champions.tmpl
@@ -10,9 +10,11 @@ public enum Champions {
     
 %s
 
-	private int key;private String label;
+	private long key;
+	
+	private String label;
 
-	private static final Map<Integer, Champions> keyMap;
+	private static final Map<Long, Champions> keyMap;
 
 	static {
         keyMap = new HashMap<>();
@@ -20,12 +22,12 @@ public enum Champions {
             keyMap.put(c.getKey(), c);
     }
 
-	private Champions(int key, String label) {
+	private Champions(long key, String label) {
         this.key = key;
         this.label = label;
     }
 	
-    public int getKey() {
+    public long getKey() {
         return key;
     }
 
@@ -33,7 +35,7 @@ public enum Champions {
         return label;
     }
 
-	public static Champions getByKey(int key) {
+	public static Champions getByKey(long key) {
         return keyMap.get(key);
     }
 
